
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "fastgrpc"
version = "0.1.0"
description = "fastgrpc lib library"
long_description = '''
# Your long description here, preferably copied from README.md
'''
long_description_content_type = "text/markdown"
url = "https://github.com/ashupednekar"
author = "Ashutosh Pednekar"
author_email = "ashupednekar49@gmail.com"
license = ""
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]
packages = ["fastgrpc"]
scripts = [
  "scripts/create_grpc_service",
  "scripts/publish_grpc_service",
  "scripts/servegrpc",
]
include_package_data = true
install_requires = [
  # You can manually specify your dependencies here
]
