[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastgrpc"
dynamic = ["version"]
dependencies = [
  "typer==0.9.0",
  "openapi3-parser==1.1.10",
  "black==23.3.0",
  "isort==5.12.0",
  "tqdm==4.66.1",
  "pydantic-settings==2.2.1",
  "grpcio-tools==1.60.1",
]
maintainers = [
  { name = "Ashutosh Pednekar", email = "ashupednekar49@gmail.com" },
]
license = { text = "MIT License" }

[project.urls]
Documentation = "https://ashupednekar.github.io/fastgrpc"
Homepage = "https://github.com/ashupednekar/fastgrpc"
